DB-9331 Display result set numbers in plan (#3402)
* DB-9331 Display result set numbers in plan

* DB-9331 Fix spotbugs

* DB-9331 Remove unused variable